--- a/template_product.html
+++ b/template_product.html
@@ -10,7 +10,7 @@
         <link rel="icon"
             href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png" />
     
-        <title>Fresh Avocados 🥑 /// NODE FARM</title>
+        <title>{%productName%} {%image%} /// NODE FARM</title>
     
         <style>
             *,
@@ -270,7 +270,7 @@
                 <div class="product__organic {%NOT-ORGANIC%}">
                     <h5>Organic</h5>
                 </div>
-                <a href="#" class="product__back">
+                <a href="/overview" class="product__back">
                     <span class="emoji-left">👈</span>Back
                 </a>
                 <div class="product__hero">
